Fixed margin on mobile

--- a/CSS/site.css
+++ b/CSS/site.css
@@ -64,8 +64,8 @@ code[class*="language-"],
         }
 
 .crop {
-    margin-top: -120px;
-    margin-bottom: -140px;
+    margin-top: -170px;
+    margin-bottom: -180px;
 }
 
 main > .container {
